--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # CREATE DATABASE `mapspot-on-rails-development` CHARACTER SET utf8 COLLATE utf8_general_ci 
 
 development:
-    adapter:  mysql 
+    adapter:  mysql2 
     database: german-week-dev
     username: german-week
     password: german-week
@@ -14,7 +14,7 @@ development:
     pool: 5
 
 production:
-    adapter:  mysql
+    adapter:  mysql2
     database: german-week-prod
     username: german-week
     password: german-week
