--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,10 @@ development:
     username: german-week
     password: german-week
     encoding: utf8
-    host: 192.168.1.200
-    port: 3306
-    #host: 127.0.0.1
-    #socket: /tmp/mysql.sock
+#    host: 192.168.1.200
+#    port: 3306
+    host: 127.0.0.1
+    socket: /tmp/mysql.sock
     reconnect: true
     pool: 5
 
