--- a/config/database.yml
+++ b/config/database.yml
@@ -3,11 +3,11 @@
 development:
     adapter:  mysql2 
     database: german-week-dev
-    username: german-week
-    password: german-week
+    username: root
+    password: asdfg
     encoding: utf8
-#    host: 192.168.1.200
-#    port: 3306
+    #host: 192.168.1.200
+    #port: 3306
     host: 127.0.0.1
     socket: /tmp/mysql.sock
     reconnect: true
