changed paperclip to use amazon s3 for file storage

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # ignore the database.yml file
 /config/database.yml
 
+#ignore s3 config
+/config/s3.yml
+
 # ignore folder with uploaded images
 /public/system
 
