updating production urls

--- a/config/deploy/production/nginx.conf
+++ b/config/deploy/production/nginx.conf
@@ -20,7 +20,7 @@ server {
 	# server_name = url to the app
 	# root = path to the application public folder
 	##############################################################
-  server_name germanweek.jumpstart.ge;
+  server_name gerweek.jumpstart.ge deutschewoche.ge www.deutschewoche.ge;
   root /home/germanweek/German-Week/current/public;
 
 	##############################################################
